Improve pricing cards with hover effects and consistent CTA buttons

--- a/index.html
+++ b/index.html
@@ -69,9 +69,43 @@
   <section class="pricing reveal" id="pricing">
     <h2>Simple Pricing</h2>
     <div class="pricing-grid">
-      <div class="price-card reveal">Free</div>
-      <div class="price-card highlight reveal">Pro</div>
-      <div class="price-card reveal">Team</div>
+      <div class="price-card reveal">
+  <h3>Free</h3>
+  <p class="price">₹0<span>/month</span></p>
+  <ul class="plan-features">
+    <li>Up to 1 project</li>
+    <li>Basic analytics</li>
+    <li>Email support</li>
+  </ul>
+    <button class="nav-btn primary">Choose Plan</button>
+
+</div>
+
+      <div class="price-card highlight reveal">
+  <h3>Pro</h3>
+  <p class="price">₹499<span>/month</span></p>
+  <ul class="plan-features">
+    <li>Up to 10 projects</li>
+    <li>Advanced analytics</li>
+    <li>Priority support</li>
+  </ul>
+    <button class="nav-btn primary">Choose Plan</button>
+
+</div>
+
+    <div class="price-card reveal">
+  <h3>Team</h3>
+  <p class="price">₹999<span>/month</span></p>
+  <ul class="plan-features">
+    <li>Unlimited projects</li>
+    <li>Team collaboration</li>
+    <li>24/7 support</li>
+  </ul>
+  <button class="nav-btn primary">Choose Plan</button>
+
+
+</div>
+
     </div>
   </section>
 
