Improve navbar spacing and visual breathing room

--- a/index.html
+++ b/index.html
@@ -8,119 +8,183 @@
 </head>
 <body>
 
-  <!-- NAVBAR -->
-  <nav class="navbar">
-    <div class="logo">FlowSync</div>
+<!-- NAVBAR -->
+<nav class="navbar">
+  <div class="logo">FlowSync</div>
 
-    <div class="hamburger" id="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
+  <div class="hamburger" id="hamburger">
+    <span></span><span></span><span></span>
+  </div>
 
-    <ul class="nav-links">
-      <li><a href="#features">Features</a></li>
-      <li><a href="#how">How it works</a></li>
-      <li><a href="#pricing">Pricing</a></li>
-      <li><button class="nav-btn primary">Get Started</button></li>
-    </ul>
-  </nav>
-
-  <!-- HERO -->
-  <section class="hero reveal">
-    <h1>Manage Work. Scale Faster.</h1>
-    <p>An all-in-one SaaS platform to manage users, tasks, and analytics.</p>
-    <div class="hero-buttons">
-      <button class="primary">Start Free</button>
-      <button class="secondary">View Demo</button>
-    </div>
-  </section>
-
-  <!-- FEATURES -->
-  <section class="features reveal" id="features">
-    <h2>Why FlowSync?</h2>
-    <div class="feature-grid">
-      <div class="card reveal">⚡ Fast Setup</div>
-      <div class="card reveal">🔐 Secure Data</div>
-      <div class="card reveal">📊 Smart Analytics</div>
-    </div>
-  </section>
-
-  <!-- HOW IT WORKS -->
-  <section class="how reveal" id="how">
-    <h2>How it works</h2>
-    <div class="steps">
-      <div class="step reveal">
-        <span class="step-number">1</span>
-        <p>Sign up</p>
-      </div>
-      <div class="step reveal">
-        <span class="step-number">2</span>
-        <p>Add your data</p>
-      </div>
-      <div class="step reveal">
-        <span class="step-number">3</span>
-        <p>Track growth</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- PRICING -->
-  <section class="pricing reveal" id="pricing">
-    <h2>Simple Pricing</h2>
-    <div class="pricing-grid">
-      <div class="price-card reveal">
-  <h3>Free</h3>
-  <p class="price">₹0<span>/month</span></p>
-  <ul class="plan-features">
-    <li>Up to 1 project</li>
-    <li>Basic analytics</li>
-    <li>Email support</li>
+  <ul class="nav-links">
+    <li><a href="#features">Features</a></li>
+    <li><a href="#how">How it works</a></li>
+    <li><a href="#pricing">Pricing</a></li>
+    <li><button class="primary">Get Started</button></li>
   </ul>
-    <button class="nav-btn primary">Choose Plan</button>
+</nav>
 
-</div>
+<!-- HERO -->
+<section class="hero reveal">
+  <h1>Turn messy work into momentum</h1>
+  <p class="hero-sub">
+    FlowSync is a calm command center for planning, tracking,
+    and shipping work — without endless meetings.
+  </p>
 
-      <div class="price-card highlight reveal">
-  <h3>Pro</h3>
-  <p class="price">₹499<span>/month</span></p>
-  <ul class="plan-features">
-    <li>Up to 10 projects</li>
-    <li>Advanced analytics</li>
-    <li>Priority support</li>
-  </ul>
-    <button class="nav-btn primary">Choose Plan</button>
+  <div class="hero-buttons">
+    <button class="primary">Start Free</button>
+    <button class="secondary">View Demo</button>
+  </div>
 
-</div>
+  <!-- MOCK DASHBOARD -->
+  <div class="mock-ui reveal">
+    <p>📊 Live dashboard preview</p>
+  </div>
+
+  <p class="hero-proof">
+    ✓ 14-day trial &nbsp; ✓ No credit card &nbsp; ✓ Cancel anytime
+  </p>
+</section>
+
+
+
+
+<!-- FEATURES -->
+<section class="features reveal" id="features">
+  <h2>Everything you need to ship calmly</h2>
+  <p class="section-sub">
+    Built for teams that care about velocity and visibility.
+  </p>
+
+  <div class="feature-grid">
+    <div class="card reveal">
+      <span class="card-icon">⚡</span>
+      <h3>Instant status</h3>
+      <p>Live dashboards update as work moves.</p>
+    </div>
+
+    <div class="card reveal">
+      <span class="card-icon">📊</span>
+      <h3>Readable reports</h3>
+      <p>Clear summaries leaders actually read.</p>
+    </div>
+
+    <div class="card reveal">
+      <span class="card-icon">🤖</span>
+      <h3>Smart automations</h3>
+      <p>Follow-ups, alerts, and nudges on autopilot.</p>
+    </div>
+  </div>
+</section>
+
+<!-- STATS -->
+<section class="stats reveal section-alt">
+  <div class="stat-box">
+    <h3>+28%</h3>
+    <p>Weekly velocity</p>
+  </div>
+  <div class="stat-box">
+    <h3>3.2 days</h3>
+    <p>Average time to ship</p>
+  </div>
+  <div class="stat-box">
+    <h3>12</h3>
+    <p>Active cycles tracked</p>
+  </div>
+</section>
+
+<!-- HOW IT WORKS -->
+<section class="how reveal" id="how">
+  <h2>From setup to results</h2>
+  <p class="section-sub">
+    Set it up once. Let the system run itself.
+  </p>
+
+  <div class="steps">
+    <div class="step reveal">
+      <span>01</span>
+      <p>Connect projects & tools</p>
+    </div>
+    <div class="step reveal">
+      <span>02</span>
+      <p>Define key signals</p>
+    </div>
+    <div class="step reveal">
+      <span>03</span>
+      <p>Automate follow-ups</p>
+    </div>
+  </div>
+</section>
+
+<!-- TESTIMONIALS -->
+<section class="testimonials reveal section-alt">
+  <h2>Teams feel the difference</h2>
+
+  <div class="testimonial-grid">
+    <div class="testimonial">
+      <p>“FlowSync turned our weekly status meeting into a 5-minute async check.”</p>
+      <span>— Ari, Engineering Lead</span>
+    </div>
+    <div class="testimonial">
+      <p>“The dashboards are so clean the whole org actually uses them.”</p>
+      <span>— Mina, Product Lead</span>
+    </div>
+  </div>
+</section>
+
+<!-- PRICING -->
+<section class="pricing reveal" id="pricing">
+  <h2>Pricing that scales with you</h2>
+
+  <div class="pricing-grid">
+    <div class="price-card reveal">
+      <h3>Free</h3>
+      <p class="price">₹0<span>/month</span></p>
+      <ul>
+        <li>1 project</li>
+        <li>Basic dashboards</li>
+        <li>Email support</li>
+      </ul>
+      <button class="primary">Choose Plan</button>
+    </div>
+
+    <div class="price-card highlight reveal">
+      <h3>Pro</h3>
+      <p class="price">₹499<span>/month</span></p>
+      <ul>
+        <li>10 projects</li>
+        <li>Advanced analytics</li>
+        <li>Priority support</li>
+      </ul>
+      <button class="primary">Choose Plan</button>
+    </div>
 
     <div class="price-card reveal">
-  <h3>Team</h3>
-  <p class="price">₹999<span>/month</span></p>
-  <ul class="plan-features">
-    <li>Unlimited projects</li>
-    <li>Team collaboration</li>
-    <li>24/7 support</li>
-  </ul>
-  <button class="nav-btn primary">Choose Plan</button>
-
-
-</div>
-
+      <h3>Team</h3>
+      <p class="price">₹999<span>/month</span></p>
+      <ul>
+        <li>Unlimited projects</li>
+        <li>Team collaboration</li>
+        <li>24/7 support</li>
+      </ul>
+      <button class="primary">Choose Plan</button>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- CTA -->
-  <section class="cta reveal">
-    <h2>Start building today</h2>
-    <button class="nav-btn primary">Get Started Free</button>
+<!-- CTA -->
+<section class="cta reveal">
+  <h2>Start shipping with clarity</h2>
+  <p>Get your dashboard live in minutes.</p>
+  <br>
+  <button class="primary">Get Started Free</button>
+</section>
 
-  </section>
+<footer>
+  © 2025 FlowSync. All rights reserved.
+</footer>
 
-  <!-- FOOTER -->
-  <footer>
-    © 2025 FlowSync. All rights reserved.
-  </footer>
-
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
